# ScienceAndTheology

./: .gitignore  .gitmodules  AGENTS.md  CMakeLists.txt  MainMenu.tscn  NOTICE  README.md  Scene.tscn  SceneWorldTest.txt  ServerScene.tscn  WorldMap.tscn  export_presets.cfg  icon.svg.import  project.godot  science_and_theology.gdextension  science_and_theology.gdextension.uid  双层互通地图设计方案.md
engine/: CMakeLists.txt
engine/assets/: CMakeLists.txt  asset_cache.h  asset_manager.cpp  asset_manager.h
engine/cmake/: download_third_party.ps1  fetch_third_party.cmake
engine/core/: CMakeLists.txt  engine_config.cpp  engine_config.h  error.h  expected.h  job_system.h  log.cpp  log.h  snt_assert.h
engine/ecs/: CMakeLists.txt  camera_system.cpp  camera_system.h  components.h  entity_guid.cpp  entity_guid.h  entt_config.h  world.h
engine/engine/: CMakeLists.txt  engine.cpp  engine.h
engine/engine_app/: CMakeLists.txt  main.cpp
engine/input/: input_state.h  input_system.cpp  input_system.h
engine/platform/: CMakeLists.txt  window.cpp  window.h
engine/render/: CMakeLists.txt  mesh_cache.cpp  mesh_cache.h  render_system.cpp  render_system.h
engine/render_backend/: CMakeLists.txt  command_context.cpp  command_context.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_depth.cpp  vulkan_depth.h  vulkan_descriptor.cpp  vulkan_descriptor.h  vulkan_device.cpp  vulkan_device.h  vulkan_frame.cpp  vulkan_frame.h  vulkan_instance.cpp  vulkan_instance.h  vulkan_mesh.cpp  vulkan_mesh.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_render_pass.cpp  vulkan_render_pass.h  vulkan_swapchain.cpp  vulkan_swapchain.h
engine/renderer/: CMakeLists.txt  pipeline_cache.cpp  render_graph.cpp  render_graph.h  render_graph_pass.h  transient_pool.cpp  transient_pool.h
engine/tests/: CMakeLists.txt
game/: CMakeLists.txt
game/automation/: ae_autocrafting.cpp  ae_autocrafting.h  ae_network.cpp  ae_network.h  ae_network_types.h  ae_pattern_provider.cpp  ae_pattern_provider.h  ae_storage_cell.cpp  ae_storage_cell.h  machine_automation_work_order.h  sfm_endpoint_registry.cpp  sfm_endpoint_registry.h  sfm_flow_program.cpp  sfm_flow_program.h  sfm_resource_transfer.cpp  sfm_resource_transfer.h
game/chemistry/: builtin_element_material_catalog.cpp  builtin_element_material_catalog.h  chemical_species.h  element_catalog.cpp  element_catalog.h
game/client/: client_block_interaction.cpp  client_block_interaction.h  creature_interaction.cpp  creature_interaction.h  creature_presentation_world.cpp  creature_presentation_world.h  day_night_lighting.cpp  day_night_lighting.h  demo_world_bootstrap.cpp  demo_world_bootstrap.h  game_components.h  game_content_registry.cpp  game_content_registry.h  game_session_config.cpp  game_session_config.h  gameplay_ui.cpp  gameplay_ui.h  ground_loot_interaction.cpp  ground_loot_interaction.h  ground_loot_presentation_world.cpp  ground_loot_presentation_world.h  inventory_slot_transaction.cpp  inventory_slot_transaction.h  lan_server_browser.cpp  lan_server_browser.h  machine_tick_system.cpp  machine_tick_system.h  main.cpp  player_motion_presentation.cpp  player_motion_presentation.h  quest_book_ui.cpp  quest_book_ui.h  remote_player_presentation_world.cpp  remote_player_presentation_world.h  science_and_theology_session.cpp  science_and_theology_session.h
game/config/: default_manifest.json  engine.json
game/locales/: en.json  zh-Hans.json
game/localization/: localization.cpp  localization.h
game/network/: game_account_peer_authenticator.cpp  game_account_peer_authenticator.h  game_ae_network_replication.cpp  game_ae_network_replication.h  game_automation_controller_replication.cpp  game_automation_controller_replication.h  game_chunk_replication.cpp  game_chunk_replication.h  game_client_replication_session.cpp  game_client_replication_session.h  game_creature_replication.cpp  game_creature_replication.h  game_ground_loot_replication.cpp  game_ground_loot_replication.h  game_inventory_replication.cpp  game_inventory_replication.h  game_lan_discovery.cpp  game_lan_discovery.h  game_quest_book_replication.cpp  game_quest_book_replication.h  game_replication_protocol.cpp  game_replication_protocol.h  game_replication_services.h  game_server_replication_handler.cpp  game_server_replication_handler.h
game/player/: local_player_profile_store.cpp  local_player_profile_store.h  player_death.h  player_identity.cpp  player_identity.h  player_motion_simulation.cpp  player_motion_simulation.h  player_replication.cpp  player_replication.h  player_state.h
game/quest/: quest_book.h  quest_progress.h  quest_registry.cpp  quest_registry.h
game/resources/: resource_aggregate_storage.h  resource_key.cpp  resource_key.h  resource_ledger_storage.cpp  resource_ledger_storage.h  resource_runtime_index.cpp  resource_runtime_index.h  resource_state.h
game/runtime/: local_player_name_prompt.cpp  local_player_name_prompt.h  runtime_package.cpp  runtime_package.h
game/scripts/: 00_material_catalog.as  10_item_catalog.as  20_machine_catalog.as  25_automation_catalog.as  30_recipe_catalog.as  40_quest_catalog.as  50_worldgen_catalog.as  p7_bootstrap.as
game/server/: game_server_ae_network_replication.cpp  game_server_ae_network_replication.h  game_server_automation_controller_replication.cpp  game_server_automation_controller_replication.h  game_server_command_sink.cpp  game_server_command_sink.h  game_server_creature_interaction.cpp  game_server_creature_interaction.h  game_server_creature_replication.cpp  game_server_creature_replication.h  game_server_ground_loot.cpp  game_server_ground_loot.h  game_server_ground_loot_persistence.cpp  game_server_ground_loot_persistence.h  game_server_ground_loot_replication.cpp  game_server_ground_loot_replication.h  game_server_inventory_replication.cpp  game_server_inventory_replication.h  game_server_player_combat.cpp  game_server_player_combat.h  game_server_player_death.cpp  game_server_player_death.h  game_server_player_interaction.cpp  game_server_player_interaction.h  game_server_player_lifecycle.cpp  (+20 more)
src/: CMakeLists.txt  build_log.txt
(+1467 files in other folders)
